Fixed Timeline on mobile

--- a/styles.css
+++ b/styles.css
@@ -2,17 +2,11 @@ body{
 margin: 0;
 padding: 0;
 overflow-x: hidden;
-
 }
-/* Hide scrollbar for Chrome, Safari and Opera */
-/* body::-webkit-scrollbar {
-    display: none;
-}   */
-/* Hide scrollbar for IE, Edge and Firefox */
-/* body {
-    -ms-overflow-style: none;  /* IE and Edge */
-    scrollbar-width: none;  /* Firefox */
-} */
+html, body {
+    overflow-x:hidden 
+  } 
+  
 @font-face {
     font-family: AmazonEmber;
     src: url(fonts/Amazon-Ember-Medium.ttf);
@@ -507,6 +501,7 @@ img {
   }
   .ag-timeline-card_desc {
     line-height: 1.45;
+    font-family: 'Montserrat-ExtraLight';
   
     font-size: 16px;
     color: #FFF;
